Fix spacing one more time

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -63,7 +63,7 @@
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 12px;
+    top: 13px;
     right: $spacing-unit / 2;
     background-color: $background-color;
     border-radius: 5px;
